# mangband

./: .gitignore  .mangrc  .travis.yml  COPYING  ChangeLog  LICENSE  MAngband.ini  Makefile  Makefile.am  README  autogen.sh  configure.ac  make.bat  mangband.cfg  mangclient.INI  mangrc  runserv
.github/workflows/: ci-cd.yml  msys2-build.yml
install/deb/: control  debit.sh  rules
install/exe/: README-client.htm  README.htm  installer-client-win.iss  installer-client-win.nsi  installer-server-win.nsi  run-server.bat
install/freebsd_port/: Makefile.rest  makeport.sh  pkg-deinstall  pkg-descr  pkg-message  pkg-plist
install/freebsd_port/files/: patch-ac
install/rpm/: spec.rest
install/tgz/: package.pl
lib/: Makefile.am
lib/bone/: Makefile.am
lib/data/: Makefile.am  countit
lib/edit/: Makefile.am  artifact.txt  cost_adj.txt  ego_item.txt  flavor.txt  limits.txt  monster.txt  object.txt  p_class.txt  p_hist.txt  p_race.txt  randarts.txt  shop_own.txt  socials.txt  terrain.txt  vault.txt
lib/game/: a_info.txt  e_info.txt  f_info.txt  k_info.txt  r_info.txt  v_info.txt
lib/help/: Makefile.am  command.txt  dead.txt  help.hlp  mangband.hlp  news.txt  option.txt  version.txt
lib/pref/: Makefile.am  font-hex.prf  font-sdl.prf  font-sdl2.prf  font-tng.prf  font-xxx.prf  font.prf  graf-dvg.prf  graf-new.prf  graf-sdl2.prf  graf-xxx.prf  graf.prf  pref-gcu.prf  pref-ibm.prf  pref-sdl.prf  pref-sdl2.prf  pref-win.prf  pref-x11.prf  pref.prf
lib/save/: Makefile.am  server-level-100  server-level-120  server-level-20  server-level-40  server-level-60  server-level-80  server.level.0.0.40  server.level.0.0.60
lib/text/: Makefile.am  attack.txt  birth.txt  dead.txt  mangband.hlp  news.txt  version.txt
lib/user/: Makefile.am  font-sdl2.prf  font-win.prf  graf-sdl2.prf  grey.prf  inscribe.prf  keymap-sdl2.prf  mouse.prf  options.prf  pref-sdl.prf  pref-sdl2.prf  pref.prf  putty.prf  user-gcu.prf  user-x11.prf  user.prf  window.prf  windows-sdl2.prf
lib/xtra/: Makefile.am
lib/xtra/font/: 10X20.FON  12X24.FON  16x16.FON  21X31TG.bdf  5X8.FON  6X10.FON  6X12.FON  6X13.FON  6X13B.FON  6X9.FON  7X13.FON  7X13B.FON  8X13.FON  8X13B.FON  9X15.FON  9X15B.FON  Makefile.am  misc6x13.hex  nethack10x19-10.hex  ui-cmd.txt
lib/xtra/graf/: Makefile.am  graphics.txt
lib/xtra/icon/: mangclient.desktop
lib/xtra/sound/: Makefile.am
src/: Makefile  Makefile.am  Makefile.in  Makefile.mingw  Makefile.win  config.h  config.h.in  configure  configure.ac  h-config.h  makefile.bcc  options.h
src/client/: Angband.rc  Makefile.am  angband.RES  angband.h  c-angband.h  c-birth.c  c-cmd.c  c-cmd0.c  c-defines.h  c-externs.h  c-files.c  c-init.c  c-inven.c  c-spell.c  c-store.c  c-tables.c  c-util.c  c-variable.c  c-xtra1.c  c-xtra2.c  client.c  externs.h  grafmode.c  grafmode.h  maid-x11.c  maid-x11.h  maim-sdl.c  main-cap.c  main-crb.c  main-gcu.c  main-ibm.c  main-sdl.c  main-sdl.h  main-sdl2.c  main-sdl2.h  main-sla.c  main-win.c  main-x11.c  net-client.c  net-client.h  (+17 more)
src/client/ios/: Info.plist  appl-dir.h  appl-dir.m
src/client/lupng/: lupng.c  lupng.h  miniz.c  miniz.h
src/client/osx/: Info.plist  Makefile.am  launch_mangclient.sh  mangclient.icns  osx_tables.h
src/client/osx/English.lproj/: Makefile.am
src/client/osx/English.lproj/main.nib/: Makefile.am
src/client/win/: Angband.rc  readdib.h  readpng.c
src/common/: Makefile.am  angband.h  base64encode.c  base64encode.h  bit.h  const.h  defines.h  externs.h  global.h  h-basic.h  h-define.h  h-net.h  h-system.h  h-type.h  md5.c  md5.h  net-basics.c  net-basics.h  net-ibm.c  net-ibm.h  net-imps.c  net-imps.h  net-pack.c  net-pack.h  net-unix.c  net-unix.h  net-win.c  net-win.h  net-xxx.c  net-xxx.h  pack.h  parser.c  parser.h  sha1.c  sha1.h  sockbuf.c  sockbuf.h  types.h  version.h  x-spell.c  (+14 more)
src/console/: c-init.c  externs.h  main-win.c  variable.c  z-term.h
src/msvc/: Angband.aps  mangclient.dep  mangclient.dsp  mangclient.dsw  mangclient.mak  mangclient.ncb  mangclient.opt  mangclient.plg
src/server/: Makefile.am  angband.h  birth.c  cave.c  cmd1.c  cmd2.c  cmd3.c  cmd4.c  cmd5.c  cmd6.c  control.c  defines.h  dungeon.c  externs.h  files.c  generate.c  init.h  init1.c  init2.c  load2.c  main.c  mangband.h  mdefines.h  melee1.c  melee2.c  monster1.c  monster2.c  net-game.c  net-game.h  net-server.c  net-server.h  netserver.c  netserver.h  obj-info.c  object1.c  object2.c  party.c  pathfind.c  printout.c  randart.c  (+18 more)
src/win/: c-win.h  fontresource.h
