
editdir = $(pkgdatadir)/edit

edit_DATA = \
		lib/edit/artifact.txt \
		lib/edit/cost_adj.txt \
		lib/edit/ego_item.txt \
		lib/edit/flavor.txt \
		lib/edit/limits.txt \
		lib/edit/monster.txt \
		lib/edit/object.txt \
		lib/edit/p_class.txt \
		lib/edit/p_hist.txt \
		lib/edit/p_race.txt \
		lib/edit/randarts.txt \
		lib/edit/shop_own.txt \
		lib/edit/socials.txt \
		lib/edit/terrain.txt \
		lib/edit/vault.txt

EXTRA_DIST += $(edit_DATA)
