
helpdir = $(pkgdatadir)/help

help_DATA = \
		lib/help/attack.txt \
		lib/help/birth.txt \
		lib/help/command.txt \
		lib/help/dead.txt \
		lib/help/dungeon.txt \
		lib/help/general.txt \
		lib/help/help.hlp \
		lib/help/mangband.hlp \
		lib/help/news.txt \
		lib/help/option.txt \
		lib/help/version.txt

EXTRA_DIST += $(help_DATA)
