
prefdir = $(pkgdatadir)/pref
pref_DATA = font.prf font-ami.prf font-ibm.prf font-sdl.prf font-win.prf font-x11.prf font-xxx.prf \
	    graf.prf graf-ami.prf graf-dvg.prf graf-new.prf graf-win.prf graf-xxx.prf \
	             flvr-dvg.prf flvr-new.prf flvr-xxx.prf xtra-dvg.prf xtra-new.prf xtra-xxx.prf \
	    pref.prf pref-acn.prf pref-emx.prf pref-ibm.prf pref-lsl.prf pref-mac.prf pref-sdl.prf pref-win.prf pref-x11.prf pref-xaw.prf
EXTRA_DIST = $(pref_DATA)
