
prefdir = $(pkgdatadir)/pref

pref_DATA = \
		lib/pref/font.prf \
		lib/pref/font-ami.prf \
		lib/pref/font-ibm.prf \
		lib/pref/font-sdl.prf \
		lib/pref/font-sdl2.prf \
		lib/pref/font-win.prf \
		lib/pref/font-x11.prf \
		lib/pref/font-xxx.prf \
		lib/pref/font-tng.prf \
		\
		lib/pref/graf.prf \
		lib/pref/graf-ami.prf \
		lib/pref/graf-dvg.prf \
		lib/pref/graf-new.prf \
		lib/pref/graf-win.prf \
		lib/pref/graf-sdl.prf \
		lib/pref/graf-sdl2.prf \
		lib/pref/graf-x11.prf \
		lib/pref/graf-xxx.prf \
		lib/pref/flvr-dvg.prf \
		lib/pref/flvr-new.prf \
		lib/pref/flvr-xxx.prf \
		lib/pref/xtra-dvg.prf \
		lib/pref/xtra-new.prf \
		lib/pref/xtra-xxx.prf \
		\
		lib/pref/pref.prf \
		lib/pref/pref-acn.prf \
		lib/pref/pref-emx.prf \
		lib/pref/pref-ibm.prf \
		lib/pref/pref-lsl.prf \
		lib/pref/pref-mac.prf \
		lib/pref/pref-gcu.prf \
		lib/pref/pref-sdl.prf \
		lib/pref/pref-sdl2.prf \
		lib/pref/pref-win.prf \
		lib/pref/pref-x11.prf \
		lib/pref/pref-xaw.prf

EXTRA_DIST += $(pref_DATA)
