
userdir = $(pkgdatadir)/user
user_DATA = flvr-dvg.prf flvr-new.prf flvr-xxx.prf font-ami.prf font-ibm.prf font-sdl.prf font-win.prf font-x11.prf font-xxx.prf font.prf \
	    graf-ami.prf graf-dvg.prf graf-new.prf graf-win.prf graf-xxx.prf graf.prf options.prf pref-acn.prf pref-emx.prf \
	    pref-ibm.prf pref-lsl.prf pref-mac.prf pref-sdl.prf pref-win.prf pref-x11.prf pref-xaw.prf pref.prf putty.prf user-gcu.prf \
            user-x11.prf user.prf window.prf xtra-dvg.prf xtra-new.prf xtra-xxx.prf
EXTRA_DIST = $(user_DATA)
