
noinst_LIBRARIES = libcommon.a
AM_CFLAGS = -DPKGDATADIR=\"$(pkgdatadir)\"

libcommon_a_SOURCES = md5.c net-ibm.c net-unix.c net-win.c sockbuf.c z-form.c z-rand.c \
		      z-util.c z-virt.c \
		      angband.h bit.h const.h defines.h global.h h-basic.h h-define.h h-net.h \
		      h-system.h h-type.h md5.h net-ibm.h net-unix.h net-win.h pack.h sockbuf.h \
		      types.h version.h z-form.h z-rand.h z-util.h z-virt.h
