
noinst_LIBRARIES = libcommon.a
AM_CFLAGS = -DPKGDATADIR=\"$(pkgdatadir)\"

libcommon_a_SOURCES = z-form.c z-rand.c z-util.c z-virt.c \
		      md5.c net-basics.c net-imps.c net-pack.c \
		      angband.h defines.h h-basic.h h-define.h h-net.h pack.h \
		      h-system.h h-type.h md5.h global.h net-basics.h net-imps.h \
		      types.h z-form.h z-rand.h z-util.h z-virt.h
