
noinst_LIBRARIES = src/libcommon.a

#src_libcommon_a_CFLAGS = -DPKGDATADIR=\"$(pkgdatadir)\"

src_libcommon_a_SOURCES = \
		src/common/z-form.c src/common/z-rand.c src/common/z-util.c \
		src/common/z-virt.c src/common/md5.c src/common/net-basics.c \
		src/common/net-imps.c src/common/net-pack.c src/common/angband.h \
		src/common/defines.h src/common/h-basic.h src/common/h-define.h \
		src/common/h-net.h src/common/pack.h src/common/h-system.h \
		src/common/h-type.h src/common/md5.h src/common/net-pack.h \
		src/common/net-basics.h src/common/net-imps.h src/common/types.h \
		src/common/parser.c src/common/parser.h \
		src/common/base64encode.c src/common/base64encode.h \
		src/common/sha1.c src/common/sha1.h \
		src/common/z-bitflag.c src/common/z-bitflag.h \
		src/common/z-form.h src/common/z-rand.h src/common/z-util.h \
		src/common/z-virt.h src/common/z-file.c src/common/z-file.h \
		src/common/z-type.h src/options.h
