
fontdir = $(pkgdatadir)/xtra/font

font_DATA = \
		lib/xtra/font/10X20.FON lib/xtra/font/12X24.FON lib/xtra/font/16x16.FON \
		lib/xtra/font/5X8.FON lib/xtra/font/6X10.FON lib/xtra/font/6X12.FON \
		lib/xtra/font/6X13.FON lib/xtra/font/6X13B.FON lib/xtra/font/6X9.FON \
		lib/xtra/font/7X13.FON lib/xtra/font/7X13B.FON lib/xtra/font/8X13.FON \
		lib/xtra/font/8X13B.FON lib/xtra/font/9X15.FON lib/xtra/font/9X15B.FON \
		lib/xtra/font/misc6x13.hex lib/xtra/font/nethack10x19-10.hex \
		lib/xtra/font/21X31TG.FON lib/xtra/font/21X31TG.bdf \
		lib/xtra/font/ui-cmd.ttf lib/xtra/font/ui-cmd.txt \
		lib/xtra/font/AnonymousPro.ttf lib/xtra/font/AnonymousPro_OFL.txt

EXTRA_DIST += $(font_DATA)
