
sounddir = $(pkgdatadir)/xtra/sound

sound_DATA = \
		lib/xtra/sound/breath.wav lib/xtra/sound/clunk.wav \
		lib/xtra/sound/death.wav lib/xtra/sound/destroy.wav \
		lib/xtra/sound/drop.wav lib/xtra/sound/eat.wav \
		lib/xtra/sound/flee.wav lib/xtra/sound/hallu.wav \
		lib/xtra/sound/hit.wav lib/xtra/sound/hit1.wav \
		lib/xtra/sound/kill.wav lib/xtra/sound/kill1.wav \
		lib/xtra/sound/level.wav lib/xtra/sound/miss.wav \
		lib/xtra/sound/miss1.wav lib/xtra/sound/money.wav \
		lib/xtra/sound/opendoor.wav lib/xtra/sound/shutdoor.wav \
		lib/xtra/sound/thump.wav lib/xtra/sound/vomit.wav \
		lib/xtra/sound/sound.cfg

EXTRA_DIST += $(sound_DATA)
